# mlfe-project

./: README.md
project/: README.md  pyproject.toml
project/.ipynb_checkpoints/: pyproject-checkpoint.toml
project/src/project/: BasicModel.ipynb  X_test.csv  eda_dataprep.py  flaskapp.py  loan.py  loanv3.py  preloan.py  streamlit.py  y_test.csv  y_train.csv
project/src/project/.ipynb_checkpoints/: BasicModel-checkpoint.ipynb  loan-checkpoint.py  preloan-checkpoint.py
project/src/project/.metaflow/LoanFlow/: latest_run
project/src/project/.metaflow/LoanFlow/1701183756113736/_meta/: _self.json
project/src/project/.metaflow/LoanFlow/1701184216143293/_meta/: _self.json
project/src/project/.metaflow/LoanFlow/1701185784436671/_meta/: _self.json
project/src/project/.metaflow/LoanFlow/1701186381528658/_meta/: _self.json
project/src/project/.metaflow/LoanFlow/1701187806696627/_meta/: _self.json
project/src/project/.metaflow/LoanFlow/1701190181626223/_meta/: _self.json
project/src/project/.metaflow/LoanFlow/1701191331322457/_meta/: _self.json
project/src/project/.metaflow/LoanFlow/1701194857516965/_meta/: _self.json
project/src/project/.metaflow/LoanFlow/1701289862974369/_meta/: _self.json
project/src/project/.metaflow/LoanFlow/1701290886193926/_meta/: _self.json
project/src/project/.metaflow/LoanFlow/_meta/: _self.json
project/src/project/.metaflow/PreLoanFlow/: latest_run
project/src/project/.metaflow/PreLoanFlow/_meta/: _self.json
project/src/project/setsnmodels/: X_test.pkl  best_model.pkl  pickle_path.pkl  y_test.pkl  y_train.pkl
(+29211 files in other folders)
